# ROS2PUBLIC

./: .gitignore  AGENTS.md  LOG.md  PI_LOG.md  QWEN.md  README.md
paper/: README.md  aruco_tracking_paper_draft.md  requirements.md  total_auto_landing_paper_draft.md
questions/: LOG.md  aruco_landing_metrics.md  baseline_z_landing_strategy.md  common_issues_from_simple_rasip_logs.md  ground_effect_landing_plan.md  real_flight_ground_effect_experiment_plan.md  requirements.md
src/altitude_descent/: README.md  package.xml  setup.cfg  setup.py
src/altitude_descent_v2/: README.md  package.xml  setup.cfg  setup.py
src/altitude_hold/: README.md  package.xml  setup.cfg  setup.py
src/altitude_hold/altitude_hold/: altitude_hold_csv_logger_node.py  altitude_hold_node.py
src/altitude_hold/launch/: altitude_hold.launch.py
src/altitude_measure/: README.md  package.xml  setup.cfg  setup.py
src/aruco_csv/: package.xml  setup.cfg  setup.py
src/aruco_csv/aruco_csv/: aruco_node.py
src/aruco_csv/aruco_log/: aruco_detection_log_20260221_220332.csv
src/aruco_csv/launch/: aruco_system.launch.py
src/aruco_detector/: package.xml  setup.py
src/aruco_detector/aruco_detector/: aruco_node.py  aruco_node.py.bak
src/aruco_detector/launch/: aruco_system.launch copy.py  aruco_system.launch.py
src/aruco_detector_mid/: package.xml  setup.cfg  setup.py
src/aruco_gazebo/: package.xml  setup.cfg  setup.py
src/aruco_gazebo/aruco_gazebo/: aruco_node.py
src/aruco_gazebo/aruco_log/: gazebo_detection_log_20260223_154701.csv  gazebo_detection_log_20260223_161852.csv  gazebo_detection_log_20260223_162240.csv  gazebo_detection_log_20260223_162700.csv  gazebo_detection_log_20260223_194900.csv
src/aruco_gazebo/launch/: aruco_gazebo.launch.py
src/aruco_gazebo_rviz/: package.xml  setup.cfg  setup.py
src/aruco_gazebo_rviz/aruco_gazebo_rviz/: aruco_node.py
src/aruco_gazebo_rviz/aruco_log/: gazebo_detection_log_20260223_201926.csv  gazebo_detection_log_20260223_204613.csv  gazebo_detection_log_20260223_211933.csv  gazebo_detection_log_20260223_213508.csv  gazebo_detection_log_20260223_214030.csv  gazebo_detection_log_20260223_214954.csv  gazebo_detection_log_20260224_092941.csv  gazebo_detection_log_20260224_215125.csv
src/aruco_gazebo_rviz/config/: aruco_rviz_config.rviz
src/aruco_gazebo_rviz/launch/: aruco_gazebo_rviz.launch.py
src/aruco_interfaces/: CMakeLists.txt  package.xml
src/aruco_landing/: package.xml  setup.py
src/aruco_position_controller/: package.xml  setup.cfg  setup.py
src/aruco_position_controller/aruco_position_controller/: position_controller_node.py
src/aruco_position_controller/launch/: aruco_position_control.launch.py
src/aruco_position_controller/rviz/: aruco_position_control.rviz
src/aruco_tf_vision/: package.xml  setup.cfg  setup.py
src/aruco_tf_vision/aruco_tf_vision/: aruco_detector_node.py  tf_alignment_test_node.py  tf_broadcaster_node.py
src/aruco_tf_vision/launch/: aruco_tf_vision.launch.py  tf_alignment_test.launch.py
src/aruco_threshold/: package.xml  setup.cfg  setup.py
src/aruco_tracking/: README.md  package.xml  setup.py
src/aruco_tracking_minimal/: README.md  package.xml  setup.cfg  setup.py
src/body_frame_tracking/: README.md  package.xml  setup.cfg  setup.py
src/body_frame_tracking_minimal/: README.md  package.xml  setup.cfg  setup.py
src/body_frame_tracking_minimal/body_frame_tracking_minimal/: csv_logger_node.py
src/body_frame_tracking_minimal/launch/: body_frame_tracking_minimal.launch.py
src/cam_in_marker/: README.md  package.xml  setup.cfg  setup.py
src/camera_calibration_pkg/: .gitignore  README.md  package.xml  readme.md  setup.py
src/camera_test/: package.xml  setup.py
src/debug_interface/: CMakeLists.txt  package.xml
src/dynamic_tracking/: README.md  package.xml  setup.py  (+1 more)
src/dynamic_tracking_v3_2/: README.md  package.xml  setup.cfg  setup.py
src/dynamic_tracking_v3_2/dynamic_tracking_v3_2/: _common.py  dynamic_tracking_v3_2_csv_logger_node.py  dynamic_tracking_v3_node.py
src/dynamic_tracking_v3_2/launch/: dynamic_tracking_v3_2.launch.py
src/gazebo_image_test/: package.xml  setup.cfg  setup.py
src/gazebo_image_test/launch/: gazebo_image_test.launch.py
src/land_v2/: README.md  package.xml  setup.cfg  setup.py
src/land_v2/land_v2/: land_v2_csv_logger_node.py  land_v2_node.py
src/land_v2/launch/: land_v2.launch.py
src/mavros_profiles/: README.md  package.xml  setup.cfg  setup.py
src/mavros_profiles/config/: workspace_minimal_pluginlists.yaml  workspace_minimal_pluginlists_no_imu.yaml
src/mavros_profiles/launch/: workspace_minimal_px4.launch.py
src/offboard_test/: README.md  package.xml  setup.cfg  setup.py
src/offboard_test/launch/: offboard_test.launch.py
src/offboard_test/offboard_test/: offboard_test_node.py
src/pose_delay_analyzer/: README.md  package.xml  setup.cfg  setup.py
src/pose_delay_analyzer/launch/: pose_delay_analyzer.launch.py
src/pose_delay_analyzer/pose_delay_analyzer/: pose_delay_analyzer_node.py
src/rivz/: README.md  package.xml  setup.cfg  setup.py
src/rivz/launch/: rivz_full.launch.py
src/rover_teleop_ackermann/: package.xml  readme.md  setup.cfg  setup.py
src/rover_teleop_ackermann/launch/: rover_teleop_ackermann.launch.py
src/rover_teleop_ackermann/rover_teleop_ackermann/: ackermann_kinematic_controller_node.py  keyboard_arrow_teleop_node.py
src/tf_broadcast/: README.md  package.xml  setup.py
src/tf_broadcast/tf_broadcast/: cam_tf_node.py  map_aruco_static_tf_node.py  map_base_link_tf_node.py  vision_pose_tf_node.py
src/tvec/: README.md  package.xml  setup.cfg  setup.py
src/tvec/config/: camera_profiles.yaml
src/tvec/launch/: tvec.launch.py
src/tvec/rviz/: tvec.rviz
src/tvec/tvec/: camera_profiles.py  image_raw_timing_probe_node.py  rvec_yaw_node.py  tvec_rvec_node.py
tools/: plot_pid_tuning_v2_batch.py  plot_pid_tuning_v3_batch.py  plot_pid_tuning_v4_batch.py  plot_xy_tracking_batch.py
trackingcsv/: 3.15_analysis_summary.tsv  3.15_circling_rank.tsv  final5s.csv  pid_tuning_summary.csv  yaw_then_xy_tracking_summary.csv
(+299 files in other folders)
