<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- 🔥 关键：包名必须是 aruco_gazebo -->
  <name>aruco_gazebo</name>
  <version>0.0.1</version>
  <description>ArUco Detector for Gazebo Simulation with Bridge</description>
  <maintainer email="zjh@todo.todo">zjh</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>aruco_interfaces</depend>
  <depend>tf_transformations</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>