<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_gazebo_rviz</name>
  <version>0.0.1</version>
  <description>ArUco Detector for Gazebo with RViz2 TF Visualization</description>
  <maintainer email="zjh@todo.todo">zjh</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>aruco_interfaces</depend>
  <depend>tf_transformations</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  
  <!-- Gazebo 桥接依赖 -->
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>