<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_tf_vision</name>
  <version>0.0.1</version>
  <description>ArUco TF Vision - 整合 ArUco 检测、TF 显示和相机图像可视化</description>
  <maintainer email="zjh@todo.todo">zjh</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>aruco_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
