<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_delay_analyzer</name>
  <version>0.0.0</version>
  <description>Record local and visual pose streams and estimate delay from ramp start timing.</description>
  <maintainer email="junhengsect+1647307223@qq.com">zjh</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>debug_interface</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>tvec</exec_depend>
  <exec_depend>tvec_tf</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
