<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rivz</name>
  <version>0.0.0</version>
  <description>Launch aggregation package for tvec, matrix nodes and tf broadcast</description>
  <maintainer email="junhengsect+1647307223@qq.com">zjh</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tvec</exec_depend>
  <exec_depend>matrix_marker_in_cam</exec_depend>
  <exec_depend>matrix_cam_in_marker</exec_depend>
  <exec_depend>matrix_baselink_in_cam</exec_depend>
  <exec_depend>matrix_baselink_in_marker</exec_depend>
  <exec_depend>tf_broadcast</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
